[package]
name = "too_many_linked_lists"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "first"
path = "src/bin/bad_stack.rs"

[[bin]]
name = "second"
path = "src/bin/ok_stack.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_call = "allow"
